# printtostderr

./: MANIFEST.in  Makefile  README.rst  pyproject.toml
docs/: CNAME  index.html  v1.0.rst  v1.1.rst
src/printtostderr/core/: __init__.py
src/printtostderr/tests/: __init__.py  test_0.py  test_1.py
