[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []
description = "This project provides a function that prints to sys.stderr."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "printtostderr"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.1.1"

[project.urls]
Download = "https://pypi.org/project/printtostderr/#files"
Index = "https://pypi.org/project/printtostderr/"
Source = "https://github.com/johannes-programming/printtostderr/"
Website = "https://printtostderr.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
python_version = "3.11"
strict = false
